feat: update AI service URL and remove FastAPI client
- Changed AI service URL from localhost to ai-service in DocumentService and FastApiClient.
- Removed FastAPIClient class as it is no longer needed.
- Updated FastAPIWebhookController to handle raw body for job completion.
- Adjusted ReportContentStorageService to use uppercase environment variable for report content directory.
- Enhanced application.yml with new AI service configuration and CORS settings.
- Added docker-compose.override.yml for local development overrides.
- Introduced docker-compose.test.yml for isolated test environment.
- Updated docker-compose.yml to include MinIO for S3 compatibility.
- Modified frontend Dockerfile for better user permissions.
- Refactored useSSE hook to improve connection handling and error management.
- Updated Helm chart values for domain and TLS configuration.
- Enhanced Terraform scripts for EKS and RDS configurations, including engine version and instance type.
- Created bootstrap script for initializing Terraform state backend.